[package]
name = "forest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-htmx = "0.3.0"
actix-rt = "2.6"
actix-web = { version = "4.0.1", features = ["macros"] }
actix-web-lab = "0.20.1"
actix-web-static-files = "4.0.1"
actix-ws = "0.2.0"
anyhow = "1.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
async-priority-channel = "0.1.0"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
clearscreen = "2.0.1"
cli-log = "2.0.0"
color-eyre = "0.6.2"
colored = "2.0.4"
crossterm = "0.27.0"
futures = "0.3"
futures-util = "0.3.29"
glob = "0.3.1"
log = "0.4"
miette = "5.10.0"
mime = "0.3.17"
parking_lot = "0.12.1"
pretty_env_logger = "0.4"
ratatui = "0.24.0"
serde = { version = "1.0.192", features = ["derive"] }
static-files = "0.2.1"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
watchexec = "2.3.0"
watchexec-filterer-globset = "1.2.0"
watchexec-signals = "1.0.0"

[[bin]]
name = "forest-server"

[build-dependencies]
static-files = "0.2.1"
