[package]
name = "forest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-rt = "2.6"
actix-web = { version = "4.0.1", features = ["macros"] }
actix-ws = "0.2.0"
anyhow = "1.0"
async-priority-channel = "0.1.0"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
clearscreen = "2.0.1"
cli-log = "2.0.0"
color-eyre = "0.6.2"
colored = "2.0.4"
crossterm = "0.27.0"
futures = "0.3"
glob = "0.3.1"
log = "0.4"
miette = "5.10.0"
mime = "0.3.17"
pretty_env_logger = "0.4"
ratatui = "0.24.0"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
watchexec = "2.3.0"
watchexec-filterer-globset = "1.2.0"
watchexec-signals = "1.0.0"

[[bin]]
name = "forest-server"
